refactor(mybatis): 优化数据权限模块及依赖管理
- 移除原有数据权限相关注解和 SPI，改为通过 common 模块统一管理
- 数据权限表达式组合移除外层括号包裹，简化逻辑
- 增加数据权限拦截器降级策略配置（放行或拒绝）
- 支持自定义额外跳过表名配置，合并默认跳过表名单
- 引入 TransmittableThreadLocal 支持异步上下文传递
- 数据权限获取失败时根据配置返回固定表达式或不追加条件
- 数据权限切面新增，结合 PermissionCodeExtractor 实现自动提取权限码
- 优化 MyBatisPlus 配置，修正依赖及注册条件，支持 AOP 切面
- 移除 DynamicAuthRoute 模型及相关依赖
- 统一使用 common.Result 替代 web.Result 及相关序列化调整
- 更新多个模块依赖，调整 optional 标记，新增 spring-aop、aspectjweaver、ttl 依赖
- Sa-Token 模块新增默认 PermissionCodeExtractor 实现，用于权限码自动提取
- 其他若干依赖与导入路径调整，清理冗余代码和注释，提高代码整洁度和一致性